@@ -30,7 +30,7 @@ Java 有 8 种基本数据类型：
 
 #### 面试常问
 
-**问：int 和 Integer 有什么区别？**
+--问：int 和 Integer 有什么区别？--
 
 答：`int` 是基本数据类型，存储具体数值；`Integer` 是包装类，是对象，可以为 `null`，可以用于集合、泛型等只支持引用类型的场景。
 
@@ -87,7 +87,7 @@ System.out.println(c == d); // false
 
 #### 面试常问
 
-**问：为什么 Integer 的 == 有时候是 true，有时候是 false？**
+--问：为什么 Integer 的 == 有时候是 true，有时候是 false？--
 
 答：因为 `Integer.valueOf()` 对 `-128 到 127` 范围内的整数使用缓存。这个范围内相同数值返回同一个对象，所以 `==` 为 true；超出范围通常创建新对象，所以 `==` 为 false。比较包装类的值应该使用 `equals()`。
 
@@ -99,8 +99,8 @@ Java 常见运算符：
 
 | 类型 | 示例 |
 | --- | --- |
-| 算术运算符 | `+ - * / %` |
-| 赋值运算符 | `= += -= *= /=` |
+| 算术运算符 | `+ - - / %` |
+| 赋值运算符 | `= += -= -= /=` |
 | 比较运算符 | `> < >= <= == !=` |
 | 逻辑运算符 | `&& \|\| !` |
 | 位运算符 | `& | ^ ~ << >> >>>` |
@@ -484,6 +484,7 @@ Java 8 引入了新的时间 API。
 LocalDateTime now = LocalDateTime.now();
 Instant instant = Instant.now();
 ZoneId tokyo = ZoneId.of("Asia/Tokyo");
+instant.atZone(tokyo);
 ```
 
 #### 项目建议
@@ -618,7 +619,7 @@ deque.addLast("B");
 
 #### 面试常问
 
-**问：HashMap 是线程安全的吗？**
+--问：HashMap 是线程安全的吗？--
 
 答：不是。多线程同时 put 可能导致数据覆盖、数据丢失等问题。多线程场景应使用 `ConcurrentHashMap`。
 
@@ -782,6 +783,368 @@ if (user == null) {
 
 - InputStream / OutputStream
 - Reader / Writer
+
+##### 字节流（Byte Stream）与字符流（Character Stream）
+
+###### 什么是字节流
+
+字节流（Byte Stream）以 --字节（Byte）-- 为单位读取和写入数据。
+
+Java 中的字节流体系：
+
+```java
+InputStream
+OutputStream
+```
+
+常见实现类：
+
+```java
+FileInputStream
+FileOutputStream
+BufferedInputStream
+BufferedOutputStream
+ObjectInputStream
+ObjectOutputStream
+```
+
+###### 特点
+
+- 以字节为单位处理数据
+- 可以处理任何类型文件
+- 不关心文件编码格式
+- 适用于图片、视频、音频、压缩包等二进制文件
+
+###### 示例
+
+```java
+FileInputStream fis = new FileInputStream("test.txt");
+
+int data;
+while ((data = fis.read()) != -1) {
+    System.out.println(data);
+}
+```
+
+输出的是字节值：
+
+```text
+72
+101
+108
+108
+111
+```
+
+对应字符：
+
+```text
+Hello
+```
+
+---
+
+###### 什么是字符流
+
+字符流（Character Stream）以 --字符（Character）-- 为单位读取和写入数据。
+
+Java 中的字符流体系：
+
+```java
+Reader
+Writer
+```
+
+常见实现类：
+
+```java
+FileReader
+FileWriter
+BufferedReader
+BufferedWriter
+InputStreamReader
+OutputStreamWriter
+```
+
+###### 特点
+
+- 以字符为单位处理数据
+- 自动完成编码和解码
+- 适用于文本文件处理
+- 读取中文更加方便
+
+###### 示例
+
+```java
+FileReader fr = new FileReader("test.txt");
+
+int ch;
+while ((ch = fr.read()) != -1) {
+    System.out.print((char) ch);
+}
+```
+
+输出：
+
+```text
+Hello
+```
+
+---
+
+###### 字节流与字符流的区别
+
+| 对比项 | 字节流 | 字符流 |
+| ------ | -------------------------- | ----------------------- |
+| 操作单位 | 字节(Byte) | 字符(Character) |
+| 父类 | InputStream / OutputStream | Reader / Writer |
+| 是否处理编码 | 否 | 是 |
+| 是否适合中文 | 不方便 | 方便 |
+| 适用场景 | 图片、视频、音频、压缩包等 | txt、json、xml、html 等文本文件 |
+
+---
+
+###### 为什么需要字符流
+
+假设文件内容为：
+
+```text
+中国
+```
+
+UTF-8编码实际存储为：
+
+```text
+中 = E4 B8 AD
+国 = E5 9B BD
+```
+
+共占用：
+
+```text
+6个字节
+```
+
+###### 使用字节流读取
+
+```java
+FileInputStream fis = new FileInputStream("test.txt");
+```
+
+读取结果：
+
+```text
+228
+184
+173
+229
+155
+189
+```
+
+得到的是原始字节。
+
+---
+
+###### 使用字符流读取
+
+```java
+FileReader fr = new FileReader("test.txt");
+```
+
+读取结果：
+
+```text
+中
+国
+```
+
+字符流会自动根据编码将字节转换成字符。
+
+---
+
+###### 字符流底层原理
+
+字符流本质上也是字节流。
+
+例如：
+
+```java
+FileReader
+```
+
+底层实际上使用：
+
+```java
+FileInputStream
+```
+
+结构如下：
+
+```text
+文件
+ ↓
+FileInputStream
+ ↓
+编码解码
+ ↓
+FileReader
+ ↓
+字符
+```
+
+因此可以理解为：
+
+```text
+字符流 = 字节流 + 编码转换
+```
+
+---
+
+###### 为什么会出现乱码
+
+乱码本质原因：
+
+```text
+编码与解码方式不一致
+```
+
+例如：
+
+文件编码：
+
+```text
+UTF-8
+```
+
+读取时使用：
+
+```text
+GBK
+```
+
+结果可能变成：
+
+```text
+涓浗
+```
+
+因此开发中应保证：
+
+```text
+保存编码 == 读取编码
+```
+
+推荐统一使用：
+
+```text
+UTF-8
+```
+
+---
+
+###### BufferedReader 为什么效率更高
+
+普通读取：
+
+```java
+FileReader
+```
+
+每次读取一个字符。
+
+---
+
+BufferedReader：
+
+```java
+BufferedReader br =
+    new BufferedReader(
+        new FileReader("test.txt")
+    );
+```
+
+会先读取一块数据（默认约8KB）到内存缓冲区，再从缓冲区读取。
+
+优点：
+
+- 减少磁盘IO次数
+- 提高读取性能
+
+---
+
+###### 实际开发中的选择
+
+####### 文本文件
+
+例如：
+
+```text
+txt
+json
+xml
+html
+csv
+sql
+```
+
+推荐：
+
+```java
+BufferedReader
+BufferedWriter
+Files.readString()
+Files.writeString()
+```
+
+---
+
+####### 二进制文件
+
+例如：
+
+```text
+jpg
+png
+mp4
+zip
+pdf
+docx
+xlsx
+```
+
+推荐：
+
+```java
+FileInputStream
+FileOutputStream
+BufferedInputStream
+BufferedOutputStream
+```
+
+---
+
+###### 面试总结
+
+####### 字节流和字符流有什么区别？
+
+字节流以字节为单位处理数据，可以处理任何类型文件；字符流以字符为单位处理数据，本质上是字节流加上字符编码转换功能，主要用于文本文件处理。
+
+开发中通常遵循：
+
+```text
+文本文件 → 字符流
+
+图片、视频、压缩包 → 字节流
+```
+
+一句话记忆：
+
+字节流 = 原始数据搬运工
+
+字符流 = 字节流 + 编码解码器
+
+---
 
 #### Channel
 
@@ -1061,153 +1424,593 @@ CompletableFuture.supplyAsync(() -> "hello")
 
 ---
 
-## 五、JVM（简单了解）
+## 五、JVM（Java Virtual Machine，Java虚拟机）
 
-### 1. JVM 内存结构
+### JVM是什么
 
-#### 1.1 堆（Young / Old）
+JVM（Java Virtual Machine）即 Java 虚拟机，是运行 Java 程序的核心组件。
 
-堆用于存放对象实例，是 GC 主要管理区域。
+主要负责：
 
-Young 区：新对象大多先进入这里。  
-Old 区：长期存活对象晋升到这里。
+- 类加载（Class Loading）
+- 内存管理（Memory Management）
+- 垃圾回收（Garbage Collection）
+- 即时编译（JIT Compilation）
 
-Young 区通常又分为：
-
-- Eden
-- Survivor From
-- Survivor To
-
----
-
-#### 1.2 方法区（MetaSpace）
-
-Java 8 后使用 Metaspace，存储类元信息、常量、方法信息等。
-
-Metaspace 使用本地内存，不再固定在 JVM 堆内。
-
----
-
-#### 1.3 栈
-
-每个线程都有自己的虚拟机栈。方法调用会创建栈帧，栈帧中保存：
-
-- 局部变量表
-- 操作数栈
-- 动态链接
-- 方法返回地址
-
-常见错误：`StackOverflowError`。
-
----
-
-#### 1.4 程序计数器
-
-记录当前线程执行到哪一条字节码指令。线程私有，占用很小。
-
----
-
-### 2. GC 垃圾回收
-
-#### 2.1 CMS / G1 / ZGC / Shenandoah
-
-| GC | 特点 |
-| --- | --- |
-| CMS | 低停顿，老年代收集器，已逐渐淘汰 |
-| G1 | 分区回收，兼顾吞吐和停顿，常用 |
-| ZGC | 超低延迟，适合大内存低停顿场景 |
-| Shenandoah | 低停顿 GC，和 ZGC 类似方向 |
-
----
-
-#### 2.2 GC Roots
-
-可作为 GC Roots 的对象包括：
-
-- 虚拟机栈中引用的对象
-- 方法区中静态属性引用的对象
-- 方法区中常量引用的对象
-- 本地方法栈 JNI 引用对象
-- 活跃线程对象
-
-从 GC Roots 可达的对象不会被回收。
-
----
-
-#### 2.3 STW
-
-Stop The World，指 GC 时暂停用户线程。
-
-STW 时间过长会导致系统响应变慢，甚至请求超时。
-
----
-
-#### 2.4 对象晋升机制
-
-对象一般先分配在 Eden 区。经过多次 Minor GC 后仍然存活，会晋升到 Old 区。
-
-大对象也可能直接进入 Old 区。
-
----
-
-### 3. JVM 调优
-
-#### 3.1 常用 JVM 参数
+Java 程序能够实现：
 
 ```text
--Xms 初始堆大小
--Xmx 最大堆大小
--Xmn 新生代大小
--XX:+UseG1GC 使用 G1 GC
--XX:MaxGCPauseMillis 最大停顿目标
--XX:+HeapDumpOnOutOfMemoryError OOM 时导出堆快照
--XX:HeapDumpPath 堆快照路径
+Write Once, Run Anywhere
+一次编写，到处运行
+```
+
+本质上就是依赖 JVM。
+
+---
+
+### 5.1 JVM 内存结构（JVM Memory Structure）
+
+#### 堆（Heap）
+
+Heap（堆）是 JVM 最大的内存区域。
+
+主要存放：
+
+- 对象实例（Object）
+- 数组（Array）
+
+例如：
+
+```java
+User user = new User();
+```
+
+new 创建的对象都存放在 Heap 中。
+
+##### Heap 分代结构
+
+```text
+Heap
+├── Young Generation（新生代）
+│   ├── Eden
+│   ├── Survivor From
+│   └── Survivor To
+│
+└── Old Generation（老年代）
+```
+
+##### Young Generation（新生代）
+
+存放新创建的对象。
+
+特点：
+
+- 对象产生最多
+- GC 最频繁
+
+---
+
+##### Old Generation（老年代）
+
+经过多次 GC 后仍然存活的对象进入老年代。
+
+例如：
+
+```java
+Spring Bean
+缓存对象
+连接池对象
 ```
 
 ---
 
-#### 3.2 内存溢出排查（OOM）
+#### 方法区（Method Area）
 
-基本步骤：
+用于存储：
 
-1. 查看错误日志。
-2. 确认 OOM 类型。
-3. 获取 heap dump。
-4. 使用 MAT / JVisualVM 分析大对象。
-5. 找到对象引用链。
-6. 定位代码问题。
+- 类信息（Class Metadata）
+- 方法信息（Method Metadata）
+- 常量池（Runtime Constant Pool）
+- 静态变量（Static Variables）
 
-常见原因：
+##### JDK8以前
 
-- 集合无限增长
-- 缓存没有过期策略
-- 大对象频繁创建
-- 线程过多
-- 类加载过多
+```text
+Permanent Generation（PermGen）
+永久代
+```
+
+##### JDK8开始
+
+```text
+MetaSpace（元空间）
+```
+
+MetaSpace 使用本地内存（Native Memory）。
+
+常见异常：
+
+```text
+java.lang.OutOfMemoryError: Metaspace
+```
 
 ---
 
-#### 3.3 MAT、JVisualVM
+#### Java 虚拟机栈（Java Virtual Machine Stack）
 
-#### MAT
+简称：
 
-Memory Analyzer Tool，用于分析 heap dump。
+```text
+Stack（栈）
+```
 
-重点看：
+特点：
 
-- Dominator Tree
-- Leak Suspects
-- Retained Heap
+- 线程私有
+- 生命周期与线程一致
+
+存储：
+
+- 局部变量（Local Variable）
+- 方法参数（Method Parameter）
+- 方法调用信息
+
+例如：
+
+```java
+public void test() {
+    int age = 18;
+}
+```
+
+变量 age 存放在栈中。
+
+常见异常：
+
+```text
+java.lang.StackOverflowError
+```
+
+例如无限递归：
+
+```java
+public void test(){
+    test();
+}
+```
+
+---
+
+#### 程序计数器（Program Counter Register）
+
+简称：
+
+```text
+PC Register
+```
+
+作用：
+
+记录当前线程执行到哪条字节码指令。
+
+特点：
+
+- 线程私有
+- JVM 唯一不会发生 OOM 的区域
+
+---
+
+#### 本地方法栈（Native Method Stack）
+
+用于执行 Native 方法。
+
+例如：
+
+```java
+Thread.start()
+Object.hashCode()
+```
+
+底层会调用 C/C++ 实现。
+
+---
+
+### 5.2 GC（Garbage Collection，垃圾回收）
+
+GC 的作用：
+
+自动回收无用对象。
+
+避免：
+
+```text
+Memory Leak（内存泄漏）
+Memory Overflow（内存溢出）
+```
+
+---
+
+#### GC Roots（垃圾回收根）
+
+GC 判断对象是否存活的起点。
+
+常见 GC Roots：
+
+- 栈中的引用对象
+- 静态变量引用
+- 常量池引用
+- JNI引用
+
+例如：
+
+```text
+GC Roots
+   │
+   ▼
+Object A
+   │
+   ▼
+Object B
+```
+
+只要对象能够从 GC Roots 找到，就不会被回收。
+
+---
+
+#### STW（Stop The World）
+
+中文：
+
+```text
+暂停世界
+```
+
+GC 执行时：
+
+```text
+所有用户线程暂停
+GC执行完成后恢复
+```
+
+STW 时间越短越好。
+
+---
+
+#### Minor GC（Young GC）
+
+回收区域：
+
+```text
+Young Generation
+新生代
+```
+
+特点：
+
+- 频繁发生
+- 回收速度快
+
+---
+
+#### Major GC
+
+回收区域：
+
+```text
+Old Generation
+老年代
+```
+
+频率较低。
+
+---
+
+#### Full GC
+
+同时回收：
+
+```text
+Young Generation
+Old Generation
+MetaSpace
+```
+
+特点：
+
+```text
+最耗性能
+停顿时间最长
+```
+
+线上系统最怕频繁 Full GC。
+
+---
+
+#### 对象晋升机制（Object Promotion）
+
+对象创建：
+
+```text
+Eden
+```
+
+经历多次 GC：
+
+```text
+Survivor
+```
+
+继续存活：
+
+```text
+Old Generation
+```
+
+这个过程称为：
+
+```text
+Object Promotion
+对象晋升
+```
+
+---
+
+### 5.3 垃圾收集器（Garbage Collector）
+
+#### CMS（Concurrent Mark Sweep）
+
+中文：
+
+```text
+并发标记清除
+```
+
+特点：
+
+```text
+低停顿
+```
+
+缺点：
+
+```text
+产生内存碎片
+```
+
+JDK14后逐渐淘汰。
+
+---
+
+#### G1（Garbage First）
+
+中文：
+
+```text
+垃圾优先回收器
+```
+
+JDK9以后默认 GC。
+
+特点：
+
+```text
+可预测停顿时间
+适用于大内存服务器
+```
+
+企业项目最常见。
+
+---
+
+#### ZGC（Z Garbage Collector）
+
+特点：
+
+```text
+超低停顿
+停顿时间通常小于10ms
+```
+
+适用于：
+
+```text
+TB级内存服务器
+```
+
+---
+
+#### Shenandoah
+
+RedHat 推出的低延迟 GC。
+
+特点：
+
+```text
+并发回收
+低停顿
+```
+
+---
+
+### 5.4 JVM 调优（JVM Tuning）
+
+#### 常用 JVM 参数
+
+##### 设置堆大小
+
+```bash
+-Xms2g
+-Xmx2g
+```
+
+含义：
+
+```text
+-Xms
+Initial Heap Size
+初始堆大小
+
+-Xmx
+Maximum Heap Size
+最大堆大小
+```
+
+---
+
+##### 查看GC日志
+
+```bash
+-Xlog:gc
+```
+
+---
+
+##### 查看详细GC信息
+
+```bash
+-XX:+PrintGCDetails
+```
+
+---
+
+### 5.5 OOM（Out Of Memory Error，内存溢出）
+
+#### Java Heap Space
+
+堆内存不足：
+
+```text
+java.lang.OutOfMemoryError:
+Java heap space
+```
+
+---
+
+#### Metaspace
+
+元空间不足：
+
+```text
+java.lang.OutOfMemoryError:
+Metaspace
+```
+
+---
+
+#### GC Overhead Limit Exceeded
+
+GC过于频繁。
+
+特点：
+
+```text
+98%以上时间在GC
+回收效果很差
+```
+
+---
+
+### 5.6 JVM问题排查工具
+
+#### MAT（Memory Analyzer Tool）
+
+内存分析工具。
+
+用于分析：
+
+- Heap Dump
+- 内存泄漏
+- 大对象
+
+---
 
 #### JVisualVM
 
-可以查看：
+JDK 自带监控工具。
+
+可查看：
 
 - CPU
-- 内存
-- 线程
-- GC 情况
-- 堆 dump
+- Memory
+- Thread
+- GC
+
+---
+
+##### Arthas
+
+阿里巴巴开源诊断工具。
+
+常用命令：
+
+```bash
+dashboard
+thread
+heapdump
+jad
+watch
+trace
+```
+
+线上排查非常常见。
+
+---
+
+##### JVM面试高频英文缩写
+
+| 缩写 | 英文全称 | 中文 |
+| --------- | ------------------------------ | --------- |
+| JVM | Java Virtual Machine | Java虚拟机 |
+| JIT | Just In Time Compiler | 即时编译器 |
+| GC | Garbage Collection | 垃圾回收 |
+| OOM | Out Of Memory Error | 内存溢出 |
+| STW | Stop The World | 暂停世界 |
+| PC | Program Counter | 程序计数器 |
+| CMS | Concurrent Mark Sweep | 并发标记清除 |
+| G1 | Garbage First | 垃圾优先 |
+| ZGC | Z Garbage Collector | Z垃圾回收器 |
+| Heap | Heap Memory | 堆 |
+| Stack | Java Virtual Machine Stack | 栈 |
+| MetaSpace | MetaSpace | 元空间 |
+| Young GC | Minor GC | 新生代GC |
+| Full GC | Full Garbage Collection | 完整GC |
+| GC Roots | Garbage Collection Roots | GC根对象 |
+| MAT | Memory Analyzer Tool | 内存分析工具 |
+| JFR | Java Flight Recorder | Java飞行记录器 |
+| JMC | Java Mission Control | Java监控工具 |
+| TLAB | Thread Local Allocation Buffer | 线程本地分配缓冲区 |
+
+---
+
+##### 面试一句话总结
+
+JVM 负责 Java 程序运行，其核心包括：
+
+- 内存管理（Heap、Stack、MetaSpace）
+- 垃圾回收（GC）
+- 即时编译（JIT）
+- 性能调优（JVM Tuning）
+
+实际项目中最常见的问题主要集中在：
+
+```text
+OOM
+Full GC
+CPU过高
+内存泄漏
+线程阻塞
+```
+
+而 JVM 调优和问题排查通常通过：
+
+```text
+GC日志
+JVisualVM
+MAT
+Arthas
+```
+
+完成分析。
 
 ---
 
@@ -1229,8 +2032,8 @@ HTTPS 解决：
 
 建立 TCP 连接需要三次握手：
 
-1. 客户端发送 SYN。
-2. 服务端返回 SYN + ACK。
+1. 客户端发送 SYN(请求建立连接)。
+2. 服务端返回 SYN + ACK(确认收到)。
 3. 客户端返回 ACK。
 
 目的：确认双方发送和接收能力都正常。
@@ -1329,7 +2132,215 @@ public class UserController {
 
 ### 1. Servlet & Web 容器（简单了解）
 
-#### 1.1 Servlet 生命周期
+#### Servlet 是什么？
+
+Servlet（Server Applet）是运行在服务器端的 Java 程序，用于接收客户端请求并返回响应结果。
+
+简单来说：
+
+```text
+浏览器发送请求
+        ↓
+     Servlet
+        ↓
+     业务处理
+        ↓
+返回响应结果
+```
+
+Servlet 是 Java Web 开发最基础的技术，也是 Spring MVC 的底层基础。
+
+---
+
+#### Servlet 的主要作用
+
+1. 接收客户端请求（Request）
+2. 处理业务逻辑
+3. 调用 Service、DAO 等组件
+4. 返回响应（Response）
+
+请求流程：
+
+```text
+浏览器
+   ↓
+Tomcat
+   ↓
+Servlet
+   ↓
+Service
+   ↓
+DAO
+   ↓
+数据库
+```
+
+---
+
+#### Servlet 生命周期
+
+Servlet 由 Tomcat 管理，生命周期包括：
+
+##### 1. init()
+
+初始化方法。
+
+Tomcat 创建 Servlet 时执行一次。
+
+```java
+public void init()
+```
+
+---
+
+##### 2. service()
+
+处理客户端请求。
+
+每次请求都会执行。
+
+```java
+protected void service(
+    HttpServletRequest request,
+    HttpServletResponse response
+)
+```
+
+---
+
+##### 3. destroy()
+
+销毁方法。
+
+Tomcat 关闭时执行一次。
+
+```java
+public void destroy()
+```
+
+---
+
+#### 生命周期流程
+
+```text
+Tomcat启动
+    ↓
+ init()
+    ↓
+
+请求1
+    ↓
+ service()
+
+请求2
+    ↓
+ service()
+
+请求3
+    ↓
+ service()
+
+Tomcat关闭
+    ↓
+ destroy()
+```
+
+---
+
+#### HttpServlet
+
+实际开发中通常继承：
+
+```java
+HttpServlet
+```
+
+而不是直接实现 Servlet 接口。
+
+常见方法：
+
+```java
+doGet()
+```
+
+处理 GET 请求。
+
+```java
+doPost()
+```
+
+处理 POST 请求。
+
+---
+
+#### Servlet 与 Tomcat 的关系
+
+```text
+Tomcat = Servlet容器
+Servlet = 请求处理组件
+```
+
+Tomcat 负责：
+
+- 创建 Servlet
+- 调用 Servlet
+- 管理 Servlet 生命周期
+- 销毁 Servlet
+
+因此 Servlet 不能独立运行，必须依赖 Tomcat 等 Web 容器。
+
+---
+
+#### Servlet 与 Spring MVC 的关系
+
+Spring MVC 底层也是基于 Servlet 实现的。
+
+核心组件：
+
+```java
+DispatcherServlet
+```
+
+本质上也是一个 Servlet。
+
+继承关系：
+
+```text
+HttpServlet
+    ↑
+FrameworkServlet
+    ↑
+DispatcherServlet
+```
+
+因此：
+
+```text
+Spring MVC
+    ↓
+DispatcherServlet
+    ↓
+Servlet
+```
+
+---
+
+#### 面试回答
+
+Servlet 是运行在服务器端的 Java 程序，用于接收客户端请求并返回响应结果。Servlet 由 Tomcat 等 Web 容器管理生命周期，主要经历 init、service、destroy 三个阶段。Spring MVC 底层也是基于 Servlet 实现的，其核心 DispatcherServlet 本质上就是一个 Servlet。
+
+---
+
+#### 一句话记忆
+
+```text
+Servlet 负责处理请求，
+Tomcat 负责运行 Servlet。
+```
+
+#### Servlet 生命周期
+
+运行在服务器上的 Java 程序，用来处理客户端请求并返回响应。
 
 Servlet 生命周期：
 
@@ -1362,6 +2373,110 @@ Servlet 生命周期：
 ---
 
 #### 1.3 Tomcat 架构
+
+##### Tomcat 是什么？
+
+Tomcat（Apache Tomcat）是 Apache 提供的一个 --Servlet 容器（Servlet Container）-- 和 --Web 服务器（Web Server）--，用于运行 Java Web 应用程序。
+
+简单来说：
+
+```text
+Servlet 负责处理请求
+Tomcat 负责运行 Servlet
+```
+
+---
+
+##### Tomcat 的主要作用
+
+1. 监听端口（如 8080）
+2. 接收 HTTP 请求
+3. 解析 HTTP 协议
+4. 调用对应的 Servlet
+5. 返回 HTTP 响应
+
+请求流程：
+
+```text
+浏览器
+   ↓
+HTTP请求
+   ↓
+Tomcat
+   ↓
+Servlet
+   ↓
+Service
+   ↓
+DAO
+   ↓
+数据库
+```
+
+---
+
+##### Tomcat 与 Servlet 的关系
+
+Servlet 本身只是一个 Java 类，无法独立运行。
+
+Tomcat 负责：
+
+- 创建 Servlet
+- 调用 Servlet
+- 管理 Servlet 生命周期
+- 销毁 Servlet
+
+因此：
+
+```text
+Tomcat = Servlet 容器
+Servlet = 业务处理组件
+```
+
+---
+
+##### Spring Boot 与 Tomcat
+
+Spring Boot 默认内置 Tomcat。
+
+启动项目时：
+
+```java
+SpringApplication.run(App.class, args);
+```
+
+实际上会：
+
+```text
+启动 Spring 容器
+↓
+启动内嵌 Tomcat
+↓
+监听 8080 端口
+↓
+等待客户端请求
+```
+
+启动日志中经常看到：
+
+```text
+Tomcat started on port(s): 8080
+```
+
+---
+
+##### 面试回答
+
+Tomcat 是 Apache 提供的 Servlet 容器和 Web 服务器，用于运行 Java Web 应用。它负责监听端口、接收 HTTP 请求、调用 Servlet 处理业务逻辑并返回响应。Spring MVC 和 Spring Boot 底层都依赖 Servlet，而 Servlet 通常运行在 Tomcat 中。
+
+---
+
+##### 一句话记忆
+
+```text
+Tomcat 负责运行 Servlet，
+Servlet 负责处理请求。
+```
 
 Tomcat 是 Servlet 容器。
 
@@ -1725,7 +2840,7 @@ JPA 是规范，Hibernate 是实现。
 常用 SQL：
 
 ```sql
-SELECT * FROM user WHERE id = 1;
+SELECT - FROM user WHERE id = 1;
 INSERT INTO user(name, age) VALUES('Tom', 18);
 UPDATE user SET age = 20 WHERE id = 1;
 DELETE FROM user WHERE id = 1;
@@ -1770,7 +2885,7 @@ MySQL InnoDB 默认是 Repeatable Read。
 常见思路：
 
 1. 使用合适索引。
-2. 避免 select *。
+2. 避免 select -。
 3. 减少大表全表扫描。
 4. 小表驱动大表。
 5. 分页深度优化。
